# IR_Session2_E2_1

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: IR_Session2.launch  usb_cam-test.launch
lic/: MotivacioLic.md
rviz/: urdf.rviz
urdf/: IR_2.urdf
